...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ar_collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:title="@string/registration"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="15dp"
...
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user_icon"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/ar_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

...

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ar_chooseImageFloatingActionButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:tint="@android:color/white"
        app:layout_anchor="@+id/appBarLayout"
...
